added null list, null elementsin list service